# emailo

./: .editorconfig  .gitignore  .isort.cfg  .travis.yml  Makefile  README.md  mypy.ini  pyproject.toml
emailo/: console.py  utils.py
tests/: test_console.py  test_utils.py
