[tool.poetry]
name = "emailo"
version = "0.1.0"
description = ""
authors = ["Vlad Dmitrievich <me@2tunnels.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[tool.poetry.scripts]
emailo = "emailo.console:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
