[tool.poetry]
name = "emailo"
version = "0.2.0"
description = ""
authors = ["Vlad Dmitrievich <me@2tunnels.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/2tunnels/emailo"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Communications :: Email",
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
email_validator = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
mypy = "^0.761"
isort = "^4.3.21"
black = "^19.10b0"
flake8 = "^3.7.9"

[tool.poetry.scripts]
emailo = "emailo.console:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
